alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
 
 .about_info {
   font-family: "Roboto Mono", monospace;
+  align-self: center;
 }
 
 .about_info_container,
